--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@types/moment": "^2.13.0",
     "axios": "^1.6.7",
+    "chart.js": "^4.4.1",
+    "moment": "^2.30.1",
     "pinia": "^2.1.7",
     "vue": "^3.4.15",
+    "vue-chartjs": "^5.3.0",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
