--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "pinia": "^2.1.7",
     "vue": "^3.4.15",
     "vue-chartjs": "^5.3.0",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vuetify": "^3.0.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
