--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/moment": "^2.13.0",
     "axios": "^1.6.7",
     "chart.js": "^4.4.1",
+    "firebase": "^10.8.0",
     "moment": "^2.30.1",
     "pinia": "^2.1.7",
     "vue": "^3.4.15",
