--- a/src/vercel.json
+++ b/src/vercel.json
@@ -5,7 +5,7 @@
         "headers": [
           {
             "key": "Content-Security-Policy",
-            "value": "frame-ancestors 'self' https://marcusokodugha.com http://localhost:5173"
+            "value": "frame-ancestors *"
           }
         ]
       }
