--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "@types/moment": "^2.13.0",
     "axios": "^1.6.7",
-    "chart.js": "^4.4.1",
+    "chart.js": "^4.4.2",
+    "chartjs-adapter-date-fns": "^3.0.0",
     "firebase": "^10.8.0",
     "moment": "^2.30.1",
     "pinia": "^2.1.7",
